tests/tests/CompileError/3_AssignedNotDeclaredFail.c
int main() {
    int a = 2;
    int c = 4;
    b = a + c;
    int b = 3;
    return 42;
}
